<resources>
    <string name="app_name">Husk</string>
    <string name="stillinger">Stillinger</string>
    <string name="leggTilKontakt">Legg til kontakt</string>
    <string name="avbryt">Avbryt</string>
    <string name="labelNavn">Navn</string>
    <string name="labelTlf">Telefonnummer</string>
    <string name="labelSMS">Send sms</string>
    <string name="labelFodselsdag">Fødselsdato</string>
    <string name="nykontakt">Ny kontakt</string>
    <string name="tekst_for_list_1">Blir</string>
    <string name="tekst_for_list_2">den</string>
    <string name="title_activity_ny_kontakt">NyKontakt</string>
    <string name="sletteDialogTittel">Slette kontakt</string>
    <string name="sletteDialogMelding">Vil du slette kontakten?</string>
    <string name="sletteDialogJa">Slett</string>
    <string name="sletteDialogNei">Avbryt</string>
    <string name="preferanserSmsMeldingTittel">SMS tekst</string>
    <string name="preferanserSmsMeldingSummary">Sett default tekst for SMS</string>
    <string name="preferanserSendSmsTittel">SMS funksjon</string>
    <string name="preferanserSendSmsSummary">Skru av/på sms funksjon</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_endre_kontakt">EndreKontakt</string>
    <string name="preferanser">Stillinger</string>
    <string name="preferences_time_title">Tidspunkt</string>
    <string name="preferences_time_summary">Når skal sms sendes ut</string>
    <string name="preferences_varsling_title">Varslinger</string>
    <string name="preferences_varsling_summary">Skru av på varslinger</string>
</resources>